# CyberGuard-Academy

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  QUICKSTART_VERTEX.md  README.md  ROADMAP.md  SAFETY_FILTER_ISSUE.md  VERTEX_AI_MIGRATION.md  api.py  cleanup_old_sessions.py  directory-structure.md  docker-compose.yml  justfile  main.py  mock_config.py  plan.md  pyproject.toml  reproduce_issue.py  reproduction_log.txt  reproduction_output.txt  setup_auth.sh  start.sh  test_groq.py  test_vertex_migration.py  ui.py
.github/: copilot-instructions.md
Testing HTMLs/: CyberGuard Academy.html  CyberGuard Academy2.html
agents/evaluation/: __init__.py  evaluation_agent.py
agents/game_master/: game_master.py
agents/memory/: memory_manager.py
agents/threat_actors/: __init__.py  phishing.py
cyberguard/: __init__.py  agents.py  config.py  gemini_client.py  groq_client.py  models.py  orchestrator.py
data/patterns/: integration_test_user_analysis.json  test_user_003_analysis.json  test_user_a2a_analysis.json
data/profiles/: integration_test_user.json  test_user.json  test_user_001.json  test_user_002_executive.json  test_user_002_finance.json  test_user_002_general.json  test_user_002_it_admin.json  test_user_003.json  test_user_a2a.json
data/progress/: integration_test_user_progress.json  test_user_003_progress.json  test_user_004_progress.json  test_user_a2a_progress.json
data/sessions/: .gitkeep  0803311f-0bdc-4089-9daf-e8bcdb5fd04d.json  1fa00b21-420c-4af4-ba6c-d38feba4de70.json  213086fb-2797-440d-8b39-1952afe213a4.json  260e3fe2-419b-4090-822e-8942940adf99.json  35c92e1c-776a-47b6-accc-8722c11b7919.json  528ae074-004a-441a-abeb-b3f9dd7f149a.json  55e3d065-3b58-481c-977b-de7e48f2b797.json  64e4c0e0-e364-4679-bb26-ce65822168b2.json  667359e5-b0d9-4f29-bd60-fed4290ed9dc.json  72e61000-5a40-48d9-9e20-87a54466976d.json  7969ca17-977e-4505-9c87-876e8f0ed487.json  7b792b9a-3be8-4e16-aa2a-e713e1f025ef.json  8174aa7d-f3f5-4745-a261-387c7fbab3c7.json  a4a258e2-1370-41de-bb87-0fb71ec4e2e2.json  active_sessions.json  cefe63f2-efe9-49d8-9014-cbf2791b9235.json  ea8d18d0-7be2-48ee-9623-1a41d247f5cf.json  fcdbfab7-357f-4589-9c07-941188488178.json
scripts/: cleanup_old_sessions.py  delete_all_sessions.py  start.ps1  start.sh  test_fixes.py  test_groq.py
tests/: conftest.py  simple_test.py  test_evaluation_agent.py  test_game_master.py  test_integration.py  test_memory_manager.py  test_models.py  test_phishing_agent.py
tools/: __init__.py  agent_coordinator.py  debrief_generator.py  email_generator.py  header_spoofing.py  hint_provider.py  link_generator.py  narrative_manager.py  pattern_analyzer.py  progress_tracker.py  scenario_selector.py  session_manager.py  user_profiler.py
